kvstore: add basic kvstore and api controller
This will allow us storing basic information, in a very basic fashion.

The current implementation just barely works. We didn't put much thought
into it. We just needed a quick and dirty workaround to store stuff.
