# src/tsoa/swagger.json
@@ -159,6 +159,36 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"APIKVStoreReply": {
+				"properties": {
+					"key": {
+						"type": "string"
+					},
+					"value": {},
+					"result": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"key",
+					"value",
+					"result"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"APIKVStoreRequest": {
+				"properties": {
+					"value": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"value"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"OZWDriverStatus": {
 				"properties": {
 					"is_connected": {
@@ -928,6 +958,128 @@
 						}
 					}
 				}
+			}
+		},
+		"/api/kvstore/get/{_key}": {
+			"get": {
+				"operationId": "Get",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/APIKVStoreReply"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "_key",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/kvstore/put/{_key}": {
+			"put": {
+				"operationId": "Put",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/APIKVStoreReply"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "_key",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/APIKVStoreRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/kvstore/exists/{_key}": {
+			"get": {
+				"operationId": "Exists",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/APIKVStoreReply"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "_key",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/kvstore/remove/{_key}": {
+			"delete": {
+				"operationId": "Remove",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/APIKVStoreReply"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "_key",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/network/status": {
